--- a/cameraDemo/package.json
+++ b/cameraDemo/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "nativefunctions",
+  "name": "cameraDemo",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "3.2.4",
     "@capacitor/app": "1.0.3",
     "@capacitor/camera": "^1.1.0",
     "@capacitor/core": "3.2.4",
@@ -25,10 +24,10 @@
     "idb": "^6.1.4",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
-    "react-audio-player": "^0.17.0",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.2",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -69,8 +68,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.2.4",
-    "react-scripts": "4.0.2"
+    "@capacitor/cli": "3.2.4"
   },
   "description": "An Ionic project"
 }
